<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_room_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.currentroom.CurrentRoomFragment">

    <TextView
        android:id="@+id/labelRoomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="12dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        tools:text="ZL O6.12" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart ="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/imgSafetyStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/current_room_fragment_status_image"
                app:layout_constraintBottom_toTopOf="@+id/labelExplanation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_safety_status_safe" />

            <TextView
                android:id="@+id/labelExplanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16pt"
                android:paddingRight="16pt"
                android:textColor="@color/teal_200"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgSafetyStatus"
                tools:text="This room is safe to stay in." />

            <LinearLayout
                android:id="@+id/dashboard_layout"
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintBottom_toTopOf="@id/history_fragment_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.cardview.widget.CardView
                    android:id="@+id/active_covid_apps_cardview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/numberOfCovidApps"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="bottom|center"
                            android:textColor="@color/white"
                            android:textSize="48sp"
                            android:textStyle="bold"
                            android:text="@string/current_room_fragment_initial_value_covid_apps" />

                        <TextView
                            android:id="@+id/labelCovidApps"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:gravity="top|center"
                            android:text="@string/current_room_fragment_number_of_active_swiss_covid_apps"
                            android:textColor="@color/teal_200"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/current_co2_cardview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/labelppm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="bottom|center"
                            android:textColor="@color/white"
                            android:textSize="48sp"
                            android:textStyle="bold"
                            tools:text="534" />

                        <TextView
                            android:id="@+id/labelCurrentCo2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:gravity="top|center"
                            android:text="@string/current_room_fragment_co2_concentration"
                            android:textColor="@color/teal_200"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/history_fragment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/covidbuster_safe_zone_blue"
                android:text="@string/current_room_fragment_history_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <!-- <TextView
                android:id="@+id/labelCurrentCo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textAlignment="center"
                android:textColor="@color/teal_200"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelppm"
                tools:text="Current CO2 concentration in ppm" />

            <TextView
                android:id="@+id/labelppm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/history_fragment_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="584" />

            <TextView
                android:id="@+id/numberOfCovidApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_room_fragment_initial_covid_app_value"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/labelCovidApps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/labelCovidApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/current_room_fragment_number_of_active_swiss_covid_apps"
                android:textAlignment="center"
                android:textColor="@color/teal_200"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/labelppm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" /> -->

        </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>